# slt-portuguese-acquisition

./: .gitignore  AGENTS.md  CODEX_HANDOFF_PROMPT.md  FUTURE_WORK.md  Makefile  PROJECT_STATUS.md  README.md  REPRODUCE.md  SHA256SUMS.txt  START_HERE_FOR_CODEX.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-core.txt
apps/dashboard/: README.md  package.json  (+5 more)
codex/: README.md  orchestrate.py  run_phase.sh
configs/: cost_model.example.json  experiment.example.yaml  recipe_search.example.yaml  sampler_sweep.example.yaml
docs/: 00_EXECUTIVE_PLAN.md  01_RESEARCH_PROTOCOL.md  02_SLT_BAYESIAN_COMPLICATIONS.md  03_THREE_DAY_EXECUTION_PLAN.md  04_BENCHMARKS_AND_FERMI_ESTIMATES.md  05_CODEX_GCP_OPERATIONS.md  06_GCP_SETUP_AND_COST_GUARDRAILS.md  07_ADAPTION_AUTOSCIENTIST_ASSESSMENT.md  08_HACKATHON_SUBMISSION_GUIDE.md  09_FAKE_REPORT_WALKTHROUGH.md  10_GO_NO_GO_CHECKLIST.md  11_FAILURE_MODES_AND_PIVOTS.md  SOURCES.md
results/: README.md
scripts/: benchmark_sampler.py  benchmark_train.py  build_guardrail_bench.py  build_packed_reference.py  build_refusal_bench.py  build_report.py  check_environment.py  estimate_project.py  final_training.py  gen_pt_minimal_pairs.py  init_repository.sh  llc_campaign.py  llc_cost_probe.py  llc_curve.py  mrguard_eval.py  mrguard_multijail.py  overnight_report.py  recipe_search.py  refusal_eval.py  scientific_pilot.py  score_minimal_pairs.py  tinystories_gate_loop.py  validate_handoff.py
state/: current_status.json  decision_log.md  experiment_registry.csv
templates/: report_outline.md  run_manifest.json
(+599 files in other folders)
